tdf#94231 OOXML Imort: Fix disappeared Hatch Background COlor

With modifying the two PROP_FILL_BACKGROUND value of charts
from false to true the hatch background color imported correctly,
because if we import an OOXML file there is always a background color.

Change-Id: I56745179236d2912a2d5c8585098e54acc4e3062